# RimBoar

./: .clang-format  .gitignore  CMakeLists.txt  README.md  benchmark.sh  build.sh  clean.sh  cpm.sh  cpmconfig.toml  init.sh  profile.sh  run.py  run.sh  subtrees.csv  test.sh  update_subtrees.sh  vcpkg.json
.github/workflows/: c-cpp.yml  codeql.yml  format.yml
assets/: Scenes.drawio
assets/audio/: music_ref.txt
docs/: README.md
scripts/: any_newer_than.sh  benchmark.py  benchmark.sh  build.py  build.sh  clean.sh  format.sh  profile.sh  recursive_newer_than.sh  test.py  test.sh  utils.py
src/: __placeholder__.cpp  game_application.cpp  game_application.hpp  main.cpp
src/application/: config.hpp  game_application.cpp  game_application.hpp
src/audio/: audio_manager.cpp  audio_manager.hpp
src/benchmarks/: benchmark.cpp  pathfinder.cpp
src/core/: entity_manager.cpp  entity_manager.hpp  world.cpp  world.hpp
src/data_structures/: graph.hpp  vector.hpp
src/graphics/: graphic_manager.cpp  graphic_manager.hpp  imgui_handler.cpp  imgui_handler.hpp  sdl_handler.cpp  sdl_handler.hpp
src/logging/: assert.cpp  assert.hpp  log.cpp  log.hpp  source_location.cpp  source_location.hpp
src/main/: game_application.cpp  game_application.hpp  main.cpp
src/pathfinding/: graph.hpp  pathfinder.cpp  pathfinder.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/scenes/: README.md  Untitled Diagram.drawio  game_application.cpp  game_application.hpp  game_scene.cpp  game_scene.hpp  menu_scene.cpp  menu_scene.hpp  scene.hpp
src/slotmap/: slotmap.hpp
src/tests/: pathfinder.cpp  slotmap.cpp  test.cpp
src/utils/: print_utils.hpp  random_utils.hpp  system.cpp  system.hpp  time_utils.cpp  time_utils.hpp
src/utils/logging/: assert.cpp  assert.hpp  source_location.cpp  source_location.hpp
